Main UI
- Added three new library icons: horror, detective and humor
- Reduced line spacing of book name
- Removed vsiualization of empty series metadata fields
- Added book title to search results

Reader UI
- Improved two fingers pinch to zoom and pan
- 

Build
- 

Fixes
- Fixed book details title