@@ -325,7 +325,7 @@ body {
 	text-align: center;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 	/*max-width: 400px;*/
-	width: 200px;
+	width: 260px;
 	color: var(--mb-text-color);
 	font-size: 18px;
 }
